[package]
edition = "2021"
name = "rfd-js"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.28"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4", "async"] }
napi-derive = "2.12.2"
rfd = { version = "0.11.4", features = ["file-handle-inner"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
